# camilo

./: Cargo.toml  README.md  build.rs
packaging/linux/: camilo.desktop
src/: app.rs  capture.rs  cli.rs  config.rs  main.rs  terminal.rs
src/capture/: camera_modes.rs  camera_stream.rs  ffmpeg.rs  freebsd_v4l2.rs  latest_capture_thumbnail.rs  linux_v4l2.rs  mod.rs  photo_capture.rs  rgb_frame.rs  video_recording.rs
src/terminal/: env.rs  input.rs  kitty_graphics.rs  layout.rs  mod.rs  raster.rs  session.rs  widgets.rs
