[package]
name = "camilo"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Terminal camera app for Kitty-compatible terminals"
license = "MIT"

[dependencies]
anyhow = "1.0"
base64-simd = "0.8"
crossterm = "0.29"
libc = "0.2"
zune-jpeg = "0.5.15"

[target.'cfg(not(target_os = "freebsd"))'.dependencies]
v4l = "0.14.0"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
